--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,21 @@
+atomicwrites==1.4.0
+attrs==19.3.0
 certifi==2020.4.5.1
 chardet==3.0.4
+colorama==0.4.3
 geographiclib==1.50
 geopy==1.21.0
 idna==2.9
+importlib-metadata==1.6.0
+loguru==0.4.1
+more-itertools==8.2.0
 numpy==1.18.4
+packaging==20.3
 pandas==1.0.3
+pluggy==0.13.1
+py==1.8.1
+pyparsing==2.4.7
+pytest==5.4.2
 python-dateutil==2.8.1
 pytz==2020.1
 requests==2.23.0
@@ -12,3 +23,6 @@ scipy==1.4.1
 six==1.14.0
 tqdm==4.46.0
 urllib3==1.25.9
+wcwidth==0.1.9
+win32-setctime==1.0.1
+zipp==3.1.0
